--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -352,65 +352,98 @@ hr {
     text-align: center;
     font-weight: bold;
     z-index: 10;
-    font-size:1.5em;
-    line-height:40px;}
+    font-size: 44px; }
   .tile.tile-2 .tile-inner {
     background: #eee4da;
+    font-size:1.5em;
+    line-height:40px;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0); }
   .tile.tile-4 .tile-inner {
     background: #ede0c8;
+    font-size:1.5em;
+    line-height:80px;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0); }
   .tile.tile-8 .tile-inner {
     color: #f9f6f2;
+    font-size:1.5em;
+    line-height:40px;
     background: #f2b179; }
   .tile.tile-16 .tile-inner {
     color: #f9f6f2;
+    font-size:1.5em;
+    line-height:40px;
     background: #f59563; }
   .tile.tile-32 .tile-inner {
     color: #f9f6f2;
+    font-size:1.5em;
+    line-height:80px;
     background: #f67c5f; }
   .tile.tile-64 .tile-inner {
     color: #f9f6f2;
+    font-size:1.5em;
+    line-height:40px;
     background: #f65e3b; }
   .tile.tile-128 .tile-inner {
     color: #f9f6f2;
     background: #edcf72;
+    font-size:1.5em;
+    line-height:80px;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.2381), inset 0 0 0 1px rgba(255, 255, 255, 0.14286); }
   .tile.tile-256 .tile-inner {
     color: #f9f6f2;
     background: #edcc61;
+    font-size:1.5em;
+    line-height:80px;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.31746), inset 0 0 0 1px rgba(255, 255, 255, 0.19048); }
   .tile.tile-512 .tile-inner {
     color: #f9f6f2;
     background: #edc850;
+    font-size:1.5em;
+    line-height:80px;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.39683), inset 0 0 0 1px rgba(255, 255, 255, 0.2381); }
   .tile.tile-1024 .tile-inner {
     color: #f9f6f2;
     background: #ffe07d;
+    font-size:1.5em;
+    line-height:80px;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.47619), inset 0 0 0 1px rgba(255, 255, 255, 0.28571); }
   .tile.tile-2048 .tile-inner {
     color: #f9f6f2;
     background: #ffe38a;
+    font-size:1.5em;
+    line-height:80px;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.47619), inset 0 0 0 1px rgba(255, 255, 255, 0.28571); }
   .tile.tile-4096 .tile-inner {
     background: #ffe697;
+    font-size:1.5em;
+    line-height:80px;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.47619), inset 0 0 0 1px rgba(255, 255, 255, 0.28571); }
   .tile.tile-8192 .tile-inner {
     background: #ffeaa8;
+    font-size:1.5em;
+    line-height:40px;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.47619), inset 0 0 0 1px rgba(255, 255, 255, 0.28571); }
   .tile.tile-16384 .tile-inner {
     background: #ffedb4;
+    font-size:1.5em;
+    line-height:80px;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.55556), inset 0 0 0 1px rgba(255, 255, 255, 0.33333); }
   .tile.tile-32768 .tile-inner {
     background: #fff1c4;
+    font-size:1.5em;
+    line-height:40px;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.55556), inset 0 0 0 1px rgba(255, 255, 255, 0.33333); }
   .tile.tile-65536 .tile-inner {
     color: #f9f6f2;
+    font-size:1.5em;
+    line-height:40px;
     background: #fff1c4;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.55556), inset 0 0 0 1px rgba(255, 255, 255, 0.33333); }
   .tile.tile-131072 .tile-inner {
     color: #f9f6f2;
     background: #fff1c4;
+    font-size:1.3em;
+    line-height:20px;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.55556), inset 0 0 0 1px rgba(255, 255, 255, 0.33333); }
   .tile.tile-super .tile-inner {
     color: #f9f6f2;
@@ -419,16 +452,62 @@ hr {
     @media screen and (max-width: 520px) {
       .tile.tile-super .tile-inner {
         font-size: 8px; } }
-
+	@media screen and (max-width: 520px) {
+	  .tile.tile-2 .tile-inner {
+        font-size: 20px; 
+		line-height:24px;}
+	  .tile.tile-4 .tile-inner {
+		font-size: 20px; 
+		line-height:48px;}
+      .tile.tile-8 .tile-inner {
+		font-size: 20px;
+		line-height:24px;}
+	  .tile.tile-16 .tile-inner {
+		font-size: 20px; 
+		line-height:24px;}
+	  .tile.tile-32 .tile-inner {
+		font-size: 20px; 
+		line-height:48px;}
+	  .tile.tile-64 .tile-inner {
+		font-size: 20px; 
+		line-height:24px;}
+      .tile.tile-128 .tile-inner {
+        font-size: 20px; 
+		line-height:48px;}
+	  .tile.tile-256 .tile-inner {
+        font-size: 20px; 
+		line-height:48px;} 
+	  .tile.tile-512 .tile-inner {
+        font-size: 20px; 
+		line-height:48px;}
+	  .tile.tile-1024 .tile-inner {
+        font-size: 20px; 
+		line-height:48px;}
+	  .tile.tile-2048 .tile-inner {
+        font-size: 20px; 
+		line-height:48px;}
+	  .tile.tile-4096 .tile-inner {
+        font-size: 20px; 
+		line-height:48px;} }
     @media screen and (max-width: 520px) {
-      .tile.tile-64 .tile-inner {
-        font-size: 20px; } }
+      .tile.tile-8192 .tile-inner {
+        font-size: 20px; 
+		line-height:24px;} }
     @media screen and (max-width: 520px) {
-      .tile.tile-256 .tile-inner {
-        font-size: 15px; } }
+      .tile.tile-16384 .tile-inner {
+        font-size: 20px; 
+		line-height:48px;} }
     @media screen and (max-width: 520px) {
-      .tile.tile-2048 .tile-inner {
+      .tile.tile-32768 .tile-inner {
         font-size: 20px;
+        line-height:24px; } }
+	@media screen and (max-width: 520px) {
+      .tile.tile-65536 .tile-inner {
+        font-size: 20px;
+        line-height:24px; } }
+	@media screen and (max-width: 520px) {
+      .tile.tile-131072 .tile-inner {
+        font-size: 15px;
         line-height:24px; } }
 
 @-webkit-keyframes appear {
@@ -864,7 +943,7 @@ hr {
     opacity: 1;
     top: -45px;
     pointer-events: auto; }
-  @media screen and (max-width: 480px) {
+  @media screen and (max-width: 520px) {
     .btc-donate {
       width: 120px; }
       .btc-donate .address {
