--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -352,7 +352,10 @@ hr {
     text-align: center;
     font-weight: bold;
     z-index: 10;
-    font-size: 44px; }
+    font-size: 44px;	
+	background-position: center center !important; 
+    background-size: cover !important; 
+    background-repeat: no-repeat !important; }
   .tile.tile-2 .tile-inner {
     background: #eee4da;
     font-size:1.5em;
@@ -434,6 +437,7 @@ hr {
     line-height:40px;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.55556), inset 0 0 0 1px rgba(255, 255, 255, 0.33333); }
   .tile.tile-65536 .tile-inner {
+	background-image: url("../images/qin.jpg") !important;
     color: #f9f6f2;
     font-size:1.3em;
     line-height:40px;
@@ -490,13 +494,14 @@ hr {
     @media screen and (max-width: 520px) {
       .tile.tile-16384 .tile-inner {
         font-size: 20px; 
-		line-height:48px;} }
+		line-height:24px;} }
     @media screen and (max-width: 520px) {
       .tile.tile-32768 .tile-inner {
         font-size: 20px;
         line-height:24px; } }
 	@media screen and (max-width: 520px) {
       .tile.tile-65536 .tile-inner {
+		background-image: url("../images/qin.jpg") !important;
         font-size: 20px;
         line-height:24px; } }
 
